# helisol

./: .gitignore  ExampleAnalemma.ipynb  ExampleShadow.ipynb  MANIFEST.in  README.md  pyproject.toml  setup.cfg
data/: Ephemerides_Aug2023.tsv  Ephemerides_March2023_47N_2E.tsv
helisol/: __init__.py  __main__.py  config.py  earth.py  earth_motion.py  general.py  locations.py  sun.py  sun_motion.py  tables.py
locations/: global.json  perso.json
tests/: test_helisol.py
