[metadata]
name = helisol
author = Olivier Vincent
author_email = ovinc.py@gmail.com
url = https://github.com/ovinc/helisol
description =  Get precise position of sun in sky (height, azimuth) at given location and time, get sunrise and sunset time, generate sundials.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = sun, position, azimuth, height, sunset, sunrise, noon, sundial, astronomy, angle, time
license_files = LICENSE
license = GNU GPLv3
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent

[options]
include_package_data = True
packages = find:
install_requires =
    importlib-metadata
    numpy
    pandas
    oclock
setup_requires =
    setuptools_scm
python_requires =
    >=3.7
